# YamlForge

./: .cursorrules  .gitattributes  .gitignore  .vulture  CLAUDE.md  LICENSE  MANIFEST.in  README.md  defaults  docs  envvars.example.sh  mappings  pyproject.toml  requirements-alibaba.txt  requirements-aws.txt  requirements-gcp.txt  requirements-major-clouds.txt  requirements-minimal.txt  requirements-oci.txt  requirements-yamlforge.txt  requirements.txt  run-streamlit.sh  setup.py  yamlforge.py
.github/workflows/: vulture.yml
.s2i/: environment
credentials/: README.md  alibaba.yaml  aws.yaml  azure.yaml  cert-manager.yaml  gcp.yaml  ibm_classic.yaml  ibm_vpc.yaml  oci.yaml  openshift.yaml  vmware.yaml
defaults/: README.md  alibaba.yaml  aws.yaml  cnv.yaml  core.yaml  gcp.yaml  ibm_classic.yaml  ibm_vpc.yaml  oci.yaml  openshift.yaml  vmware.yaml
demobuilder/: .dockerignore  .s2iignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  app.py  requirements.txt  run.sh  run_local.py  version.py  yamlforge-schema.json
demobuilder/.s2i/: environment
demobuilder/.streamlit/: config.toml
demobuilder/config/: app_config.py  auth_config.py
demobuilder/core/: infrastructure_description.py  (+7 more)
docs/: ROSA_DYNAMIC_VERSIONS.md  ai-prompts.md  ai-training.md  azure-credentials.md  examples.md  ibm-classic-configuration.md  ibm-vpc-configuration.md  installation.md  quickstart.md  rosa-dynamic-versions.md  troubleshooting.md  yamlforge-schema.json
examples/: 3tier.yaml  README.md  auto_delegation_test.yaml  auto_discovery_test.yaml  auto_flavor_discovery_example.yaml  cheapest_gpu_example.yaml  comprehensive-multi-cloud.yaml  comprehensive_guid_test.yaml  cross_project_dns_test.yaml  default_project_dns_test.yaml  domain_ownership_test.yaml  gpu-example.yaml  gpu_error_handling_demo.yaml  gpu_type_specific_example.yaml  gpu_validation_demo.yaml  gpu_workloads_example.yaml  guid_format_test.yaml  guid_terraform_test.yaml  instance_name_validation_example.yaml  micro_gpu_test.yaml  minimal_dns_test.yaml  minimal_gpu_across_clouds_example.yaml  multi-cloud.yaml  no_dns_test.yaml  numeric_guid_test.yaml  project_management_test.yaml  quick_gpu_test.yaml  security-groups.yaml  separate_domains_test.yaml  simple.yaml  ssh_keys_example.yaml  storage-example.yaml
mappings/: README.md  cloud_patterns.yaml  images.yaml  locations.yaml  sizes.yaml
tools/: README.md  extract_resourceclaim_vars.py  get_rosa_versions.py  install_git_hooks.sh  run_vulture.sh  validate_schema.py
yamlforge/: __init__.py  _version.py  main.py  utils.py
(+227 files in other folders)
